--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.3.3",
+    "tailwindcss": "^3.0.22",
+    "twin.macro": "^2.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
