--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "3.4.1",
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.22",
