--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@apollo/react-hooks": "^3.1.5",
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
